Update backend notes

--- a/misc/Advance-html/advance.html
+++ b/misc/Advance-html/advance.html
@@ -115,6 +115,9 @@
 	  &lt;body&gt;
 		&lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec viverra nec nulla vitae mollis.&lt;/p&gt;
 	  &lt;/body&gt;
-	&lt;/html&gt;</pre>
+	&lt;/html&gt;
+	</pre>
+
+	
 </body>
 </html>
